--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Bienvenue,<br> je suis <span class="text-primary">Sefa
                             GUCLU</span></h1>
-                    <p class="lead mt-4 hero-text">Actuellement étudiant en BTS Services Informatiques aux Organisations (SIO) option Solutions Logicielles et Applications Métier (SLAM), j’ai le projet de mener une carrière dans le développement informatique. </p>
+                    <p class="lead mt-4 hero-text">Actuellement étudiant en BTS Services Informatiques aux Organisations
+                        (SIO) option Solutions Logicielles et Applications Métier (SLAM), j’ai le projet de mener une
+                        carrière dans le développement informatique. </p>
                     <div class="  gap-2 d-md-flex justify-content-md-start mt-4">
                         <a href="https://www.linkedin.com/in/sefaguclu/" target="_blank" style="text-decoration: none;">
                             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
@@ -106,13 +108,13 @@
                         <div class="card-flyer">
                             <div class="text-box portfolio-item mx-auto">
                                 <div class="image-box">
-                                    <img src="assets/img/portfolio/foodtrocs.svg" alt="" /> 
+                                    <img src="assets/img/portfolio/foodtrocs.svg" alt="" />
                                 </div>
                                 <div class="text-container">
                                     <h6 class="text-foodtrocs">FoodTrocs</h6>
                                     <figcaption class="figure-caption">Septrembre 2020</figcaption>
                                     <hr>
- 
+
                                     <p>Site type marketplace où les utilisateurs peuvent vendre leurs repas à des
                                         personnes de leurs alentour.
                                         <br><br> Projet personnel, réalisé à but pédagogique, afin d'apprendre les
@@ -177,7 +179,7 @@
                                         <a href="https://sefacile.alwaysdata.net/chasseAuTresor/index.php"
                                             target="_blank"><i
                                                 class="fa-solid fa-link me-1"></i>tresor.alwaysdata.net</a>
- 
+
                                     </p>
                                     <hr>
                                     <p>Jeu de chasse au trésor, capable d'inscrire les joueurs dans une base de données
@@ -570,8 +572,8 @@
                             <p>Configuration d'un serveur Web APACHE, accessible sur le serveur de la MFR afin de rendre
                                 l'application disponible à tous.</p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <a href="https://mfr.alwaysdata.net/" target="_blank"> <button
-                                        type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <a href="https://mfr.alwaysdata.net/" target="_blank"> <button type="button"
+                                        class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                             class="fa-solid fa-laptop-code me-2"></i> Démo</button></a>
                                 <!-- 
                                 <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
@@ -602,8 +604,8 @@
 
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <a href="https://mfr.alwaysdata.net/guide.php" target="_blank"> <button
-                                        type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <a href="https://mfr.alwaysdata.net/guide.php" target="_blank"> <button type="button"
+                                        class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                             class="fa-solid fa-book me-2"></i> Guide d'utilisation</button></a>
 
                             </div>
@@ -632,7 +634,7 @@
                                 pouvoir
                                 leur permettre de travailler de façon plus efficace et qui va être réellement utilisé.
                             </p>
- 
+
                             <hr>
                             <div class="gap-2 justify-content-md-start">
                                 <h5>Soft skills</h5>
@@ -789,7 +791,9 @@
                             <p><small class="text-muted">Semaine 2 - Semaine 4</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p>Pour l’interprétation graphique, nous avons était conseillé d’utiliser Plotely (<a href="https://plotly.com/">https://plotly.com</a>) qui est une bibliothèque open source qui fournit une liste de
+                            <p>Pour l’interprétation graphique, nous avons était conseillé d’utiliser Plotely (<a
+                                    href="https://plotly.com/">https://plotly.com</a>) qui est une bibliothèque open
+                                source qui fournit une liste de
                                 types de
                                 graphiques. Dans notre cas, les chercheurs sont intéressés par les graphiques de type
                                 «heatmap» pour l’interprétation de données de ces simulations.
@@ -865,7 +869,8 @@
                             <p>
                                 Nous avons donc décidé de chercher dans un autre langage qui nous est bien familier:
                                 JavaScript. Après recherches, nous avons trouvé InteractJS.
-                                InteractJS (<a href="https://interactjs.io/">https://interactjs.io/</a>) est une librairie JavaScript, gratuit et open
+                                InteractJS (<a href="https://interactjs.io/">https://interactjs.io/</a>) est une
+                                librairie JavaScript, gratuit et open
                                 source, qui permet de rendre une interface interactive.</p>
                         </div>
                     </div>
@@ -961,6 +966,10 @@
                             <p>
                                 De plus, j'ai pu acquérir de nombreuses compétences en langage de programmation et
                                 notamment en programmation objet et logiciel.
+                            </p>
+                            <p>Finalement, je suis fier d'avoir pu contribuer à un projet qui est tout à fait
+                                opérationnel et qui est actuellement utilisé dans un projet majeur du laboratoire
+                                avec une finalité clinique.
                             </p>
                             <hr>
                             <div class="gap-2 justify-content-md-start">
