--- a/index.html
+++ b/index.html
@@ -490,6 +490,8 @@
                             </p>
                             <p>Par ailleurs, j'ai également effectué une modélisation MLD de la base de données et de
                                 l'arborescence de l'application web.</p>
+                            <p>Finalement, j'ai demandé à avoir accès à la charte graphique afin de respecter les normes
+                                de la MFR.</p>
                             <div class="gap-2 justify-content-md-start mt-3">
                                 <button data-bs-toggle="modal" data-bs-target="#portfolioModal8"
                                     class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
@@ -500,6 +502,8 @@
                                 <button data-bs-toggle="modal" data-bs-target="#portfolioModal10"
                                     class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-folder-tree me-2"></i> Arborescence</button>
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal100"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i class="fa-solid fa-paragraph me-2"></i>Charte graphique</button>
                             </div>
                         </div>
                     </div>
@@ -532,6 +536,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="timeline-badge bg-mfr"><i class="fa-solid fa-4"></i></div>
                     <div class="timeline-panel">
@@ -555,6 +560,24 @@
                                 <button data-bs-toggle="modal" data-bs-target="#portfolioModal6"
                                     class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-file-export me-2"></i> Captures d'écran</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Mise en place d'un système de sauvegarde</h4>
+                        </div>
+                        <div class="timeline-body">
+                            <p>Afin d'éviter toute perte lors d'un éventuel problème, j'ai décidé de mettre en place un
+                                système de sauvegarde au format CSV de la base de données.
+                            </p>
+                            <div class="gap-2 justify-content-md-start mt-3">
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal16"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                        class="fa-solid fa-save me-2"></i> Captures d'écran</button>
                             </div>
                         </div>
                     </div>
@@ -1356,6 +1379,55 @@
             </div>
         </div>
 
+        <!-- MFR SAVE -->
+        <div class="portfolio-modal modal fade" id="portfolioModal16" tabindex="-1" aria-labelledby="portfolioModal16"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-mfr">MFR :
+                                    </span>Sauvegarde de la base de données
+                                    </h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/csv0.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 1</h5>
+                                        <p class="card-text">Choisir les données à exporter.</p>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/csv1.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 2</h5>
+                                        <p class="card-text">Visualisation des données exportées.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- MFR CAP DEV-->
         <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" aria-labelledby="portfolioModal7"
             aria-hidden="true">
@@ -1537,6 +1609,44 @@
                                         <p class="card-text">Cela me permet d’avoir une représentation de la structure
                                             et de l'organisation de
                                             l'information et des contenus du site.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MFR CAP CHART-->
+        <div class="portfolio-modal modal fade" id="portfolioModal100" tabindex="-1" aria-labelledby="portfolioModal100"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-mfr">MFR :
+                                    </span>Charte graphique
+                                    </h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-12">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/mfr/charte0.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Charte graphique</h5>
+                                        <p class="card-text">Document de 101 pages.
                                         </p>
                                     </div>
                                 </div>
